--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -800,3 +800,29 @@ a:visited {
   width: 34px;
   height: 122px;
 }
+.game_button {
+  width: 210px;
+  height: 60px;
+  line-height: 60px;
+  background: none;
+  color: #c49f58;
+  border: 3px solid #c49f58;
+  border-radius: 40px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: .3s;
+  margin: 50px 30px;
+  display: inline-block;
+}
+
+.game_button:hover {
+  background: #c49f58;
+  color: white;
+  font-weight: 500;
+}
+
+.game_button_click {
+  background: #c49f58;
+  color: white;
+  font-weight: 500;
+}
