修改图片路径

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -325,7 +325,7 @@ a:visited {
 }
 
 .grade_details_rank {
-  background: url(../img/spr-2018.png) no-repeat 50%;
+  background: url(/static/img/spr-2018.png) no-repeat 50%;
 }
 
 .grade_details_logo {
@@ -398,7 +398,7 @@ a:visited {
 }
 
 #team_details_summary {
-  background: url(../img/team_banner-bg.jpg);
+  background: url(/static/img/team_banner-bg.jpg);
   height: 521px;
 }
 
@@ -612,8 +612,9 @@ a:visited {
 }
 
 #teammate_details_summary {
-  background: url("../img/team_banner-bg.jpg");
+  background: url("/static/img/team_banner-bg.jpg");
   height: 521px;
+  position: relative;
 }
 
 .teammate_details_summary_item {
@@ -661,7 +662,7 @@ a:visited {
   height: 100px;
   background: linear-gradient(transparent, rgba(0, 0, 0, .9));
   position: absolute;
-  top: 473px;
+  top: 423px;
 }
 
 .teammate_details_data_title {
@@ -885,7 +886,7 @@ a:visited {
 }
 
 #game {
-  background: url("../img/data_bg.jpg");
+  background: url("/static/img/data_bg.jpg");
   clear: both;
   height: 1800px;
 }
@@ -973,7 +974,7 @@ a:visited {
 }
 
 #legends_top i {
-  background: url("../img/border.png");
+  background: url("/static/img/border.png");
   display: inline-block;
   position: absolute;
   width: 156px;
@@ -987,7 +988,7 @@ a:visited {
   color: #666666;
   margin-bottom: 10px;
   font-size: 14px;
-  background: url("../img/teamBorder.png");
+  background: url("/static/img/teamBorder.png");
   display: block;
   height: 31px;
   line-height: 31px;
